# laughing-computing-machine

./: README.md  pyproject.toml  translate.py
chatgptbot/: .env  bot.py  copilot.py
