[tool.poetry]
name = "chatgpt-telegram"
version = "0.1.0"
description = ""
authors = ["Alexey Yakovenko <yakor.alex@gmail.com>"]
readme = "README.md"
packages = [{include = "chatgpt_telegram"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
